tests/snapshots/integration__integration_tests__approval_ui__approval_multiple_commands.snap
---
source: tests/integration_tests/approval_ui.rs
expression: combined
---
exit_code: 1
----- stdout -----
❌ [31mCannot prompt for approval in non-interactive environment[0m

💡 [2mIn CI/CD, use --force to skip prompts. To pre-approve commands, use 'wt beta ask-approvals'[0m

----- stderr -----
🟡 [33m[1m[33mtest-repo[0m[33m needs approval to execute [1m[33m4[0m[33m commands:[0m

🔄 post-create:
[40m [0m  [1m[34mecho[0m [32m'Branch: test-nested-branch'[0m[0m

🔄 post-create:
[40m [0m  [1m[34mecho[0m [32m'Worktree: [REPO].test-nested-branch'[0m[0m

🔄 post-create:
[40m [0m  [1m[34mecho[0m [32m'Repo: test-repo'[0m[0m

🔄 post-create:
[40m [0m  [1m[34mcd[0m [REPO].test-nested-branch [36m&&[0m [1m[34mpwd[0m[0m
